@@ -1,1 +1,2 @@
 Jürg Billeter <j@bitron.ch>
+Raffaele Sandrini <rasa@gmx.ch>
