@@ -1,0 +1,14 @@
+namespace Maman {
+	class Bar {
+		private int _a;
+		public int a {
+			get {
+				return _a;
+			}
+			set {
+				_a = value;
+			}
+		}
+	}
+}
+
